feat(condo): DOMA-10241 add ability to specify measure in marketplace (#5620)
* feat(condo): DOMA-10241 update market item create interface

* feat(condo): DOMA-10241 update market item create interface

* chore(condo): add measure

* feat(condo): DOMA-10241 add ability to specify measure in marketplace

* fix(condo): DOMA-10241 fixes on review

* fix(condo): DOMA-10241 add measure field to tests

* fix(condo): DOMA-10241 fixes on review

* fix(condo): DOMA-10241 fixes on review

* fix(condo): DOMA-10241 fixes on review

* fix(condo): DOMA-10241 fixes on review

--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -1758,6 +1758,14 @@
   "pages.condo.error.PageTitle": "Mejorando servicio",
   "pages.condo.error.paymentLinkHandler.NotFoundDescription": "No ha sido posible determinar el tipo de enlace. Quizás el enlace es incorrecto o no se ha copiado completamente.",
   "pages.condo.error.paymentLinkHandler.NotFoundTitle": "Enlace de pago desconocido",
+  "pages.condo.marketplace.measure.perHour.full": "Precio por hora",
+  "pages.condo.marketplace.measure.perHour.short": "h",
+  "pages.condo.marketplace.measure.perItem.full": "Precio por unidad",
+  "pages.condo.marketplace.measure.perItem.short": "u",
+  "pages.condo.marketplace.measure.perMeter.full": "Precio por metro",
+  "pages.condo.marketplace.measure.perMeter.short": "m",
+  "pages.condo.marketplace.noMeasure": "Pago único",
+  "pages.condo.marketplace.marketItem.form.field.measure": "Tipo de precio",
   "pages.condo.marketplace.bankAccountErrorMessage": "Error en el número de cuenta corriente",
   "pages.condo.marketplace.bankAccountValidationErrorMassage": "La combinación de Código de identificación bancaria y número de cuenta corriente no pasó verificación. ({number}, {routingNumber})",
   "pages.condo.marketplace.bankAccountValidationErrorTitle": "Añadiendo requisitos",
