--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1758,6 +1758,14 @@
   "pages.condo.error.PageTitle": "Улучшаем сервис",
   "pages.condo.error.paymentLinkHandler.NotFoundDescription": "Не удалось определить тип ссылки. Возможно ссылка неверная или скопирована не полностью.",
   "pages.condo.error.paymentLinkHandler.NotFoundTitle": "Неизвестная ссылка на оплату",
+  "pages.condo.marketplace.measure.perHour.full": "По часам",
+  "pages.condo.marketplace.measure.perHour.short": "ч",
+  "pages.condo.marketplace.measure.perItem.full": "Поштучная",
+  "pages.condo.marketplace.measure.perItem.short": "ед",
+  "pages.condo.marketplace.measure.perMeter.full": "За метр",
+  "pages.condo.marketplace.measure.perMeter.short": "м",
+  "pages.condo.marketplace.noMeasure": "Разовая работа",
+  "pages.condo.marketplace.marketItem.form.field.measure": "Оплата",
   "pages.condo.marketplace.bankAccountErrorMessage": "Ошибка в номере расчетного счета",
   "pages.condo.marketplace.bankAccountValidationErrorMassage": "Комбинация БИК и номер расчетного счета не прошли проверку. ({number}, {routingNumber})",
   "pages.condo.marketplace.bankAccountValidationErrorTitle": "Добавление реквизитов",
@@ -1809,7 +1817,7 @@
   "pages.condo.marketplace.invoice.form.property": "Адрес",
   "pages.condo.marketplace.invoice.form.service.placeholder": "Введите или выберите",
   "pages.condo.marketplace.invoice.form.servicesChosen": "Выбрано услуг",
-  "pages.condo.marketplace.invoice.form.toPay": "Цена за штуку",
+  "pages.condo.marketplace.invoice.form.toPay": "Цена за единицу",
   "pages.condo.marketplace.invoice.form.totalPrice": "Общая стоимость",
   "pages.condo.marketplace.invoice.form.totalToPay": "К оплате",
   "pages.condo.marketplace.invoice.id.disableEditButtonTooltip": "В этом статусе нельзя редактировать счет",
@@ -1823,7 +1831,7 @@
   "pages.condo.marketplace.invoice.id.notFoundError.title": "Счет не найден",
   "pages.condo.marketplace.invoice.id.table.header.count": "Кол-во",
   "pages.condo.marketplace.invoice.id.table.header.name": "Наименование",
-  "pages.condo.marketplace.invoice.id.table.header.price": "Цена за штуку",
+  "pages.condo.marketplace.invoice.id.table.header.price": "Цена за единицу",
   "pages.condo.marketplace.invoice.id.table.header.sku": "Артикул",
   "pages.condo.marketplace.invoice.id.table.header.toPay": "Общая стоимость",
   "pages.condo.marketplace.invoice.id.ticketAlert.description": "Посмотреть заявку",
