--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1758,6 +1758,14 @@
   "pages.condo.error.PageTitle": "Improving service",
   "pages.condo.error.paymentLinkHandler.NotFoundDescription": "Can't detect payment link type. Maybe link was corrupted or copied partially.",
   "pages.condo.error.paymentLinkHandler.NotFoundTitle": "Unknown payment link",
+  "pages.condo.marketplace.measure.perHour.full": "Hourly rate",
+  "pages.condo.marketplace.measure.perHour.short": "h",
+  "pages.condo.marketplace.measure.perItem.full": "Per item",
+  "pages.condo.marketplace.measure.perItem.short": "pcs",
+  "pages.condo.marketplace.measure.perMeter.full": "Per meter",
+  "pages.condo.marketplace.measure.perMeter.short": "m",
+  "pages.condo.marketplace.noMeasure": "One time payment",
+  "pages.condo.marketplace.marketItem.form.field.measure": "Rate",
   "pages.condo.marketplace.bankAccountErrorMessage": "Bank account validation failed",
   "pages.condo.marketplace.bankAccountValidationErrorMassage": "Please, check that tin, bic and account number are correct ({number}, {routingNumber})",
   "pages.condo.marketplace.bankAccountValidationErrorTitle": "Bank account add failed",
