--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -719,11 +719,11 @@
   "employee.emptyList.description": "Your employer has blocked you from the organization",
   "employee.emptyList.title": "You are blocked",
   "employee.isBlocked": "blocked",
-  "employee.reassignTickets.title": "Who should I assign employee requests to tickets?",
+  "employee.reassignTickets.title": "Who to assign the employee's tickets to?",
   "employee.reassignTickets.buttonContent.deleteUser": "Remove employee without reassignment",
   "employee.reassignTickets.buttonContent.reassignTickets": "Delete employee and reassign requests",
   "employee.reassignTickets.alert.title": "{employeeName} is assigned to multiple tickets",
-  "employee.reassignTickets.alert.message": "Reassign tickets to new employees",
+  "employee.reassignTickets.alert.message": "To avoid losing them, assign a new executor among the employees. You can not reassign requests and simply delete the employee.",
   "employee.reassignTickets.notification.title.warning": "Do not close the tab",
   "employee.reassignTickets.notification.title.error": "An error occurred",
   "employee.reassignTickets.notification.title.success": "Ready",
