--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -719,11 +719,11 @@
   "employee.emptyList.description": "Su empleador le ha bloqueado en la organización",
   "employee.emptyList.title": "Usted está bloqueado",
   "employee.isBlocked": "bloqueado",
-  "employee.reassignTickets.title": "¿A quién debo asignar las solicitudes de los empleados?",
+  "employee.reassignTickets.title": "¿A quién asignar los tickets del empleado?",
   "employee.reassignTickets.buttonContent.deleteUser": "Eliminar a un empleado sin reasignación",
   "employee.reassignTickets.buttonContent.reassignTickets": "Eliminar un empleado y reasignar aplicaciones",
   "employee.reassignTickets.alert.title": "{employeeName} está asignado a varios tickets",
-  "employee.reassignTickets.alert.message": "Para evitar perderlos, designe un nuevo albacea entre sus empleados.",
+  "employee.reassignTickets.alert.message": "Para evitar perderlos, designa un nuevo albacea entre tus empleados. No es necesario reasignar solicitudes y simplemente eliminar al empleado.",
   "employee.reassignTickets.notification.title.warning": "No cierres la pestaña",
   "employee.reassignTickets.notification.title.error": "Se produjo un error",
   "employee.reassignTickets.notification.title.success": "Listo",
