--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1761,7 +1761,7 @@
   "pages.condo.marketplace.measure.perHour.full": "По часам",
   "pages.condo.marketplace.measure.perHour.short": "ч",
   "pages.condo.marketplace.measure.perItem.full": "Поштучная",
-  "pages.condo.marketplace.measure.perItem.short": "ед",
+  "pages.condo.marketplace.measure.perItem.short": "шт",
   "pages.condo.marketplace.measure.perMeter.full": "За метр",
   "pages.condo.marketplace.measure.perMeter.short": "м",
   "pages.condo.marketplace.noMeasure": "Разовая работа",
@@ -1818,7 +1818,7 @@
   "pages.condo.marketplace.invoice.form.service.placeholder": "Введите или выберите",
   "pages.condo.marketplace.invoice.form.servicesChosen": "Выбрано услуг",
   "pages.condo.marketplace.invoice.form.toPay": "Цена за единицу",
-  "pages.condo.marketplace.invoice.form.totalPrice": "Общая стоимость",
+  "pages.condo.marketplace.invoice.form.totalPrice": "Общая сумма",
   "pages.condo.marketplace.invoice.form.totalToPay": "К оплате",
   "pages.condo.marketplace.invoice.id.disableEditButtonTooltip": "В этом статусе нельзя редактировать счет",
   "pages.condo.marketplace.invoice.id.field.address": "Адрес",
@@ -1833,7 +1833,7 @@
   "pages.condo.marketplace.invoice.id.table.header.name": "Наименование",
   "pages.condo.marketplace.invoice.id.table.header.price": "Цена за единицу",
   "pages.condo.marketplace.invoice.id.table.header.sku": "Артикул",
-  "pages.condo.marketplace.invoice.id.table.header.toPay": "Общая стоимость",
+  "pages.condo.marketplace.invoice.id.table.header.toPay": "Общая сумма",
   "pages.condo.marketplace.invoice.id.ticketAlert.description": "Посмотреть заявку",
   "pages.condo.marketplace.invoice.id.ticketAlert.message": "Счет привязан к заявке №{number}",
   "pages.condo.marketplace.invoice.id.title.order": "Состав",
@@ -1879,7 +1879,7 @@
   "pages.condo.marketplace.marketItem.form.field.description.placeholder": "Введите описание услуги",
   "pages.condo.marketplace.marketItem.form.field.description.tooltip": "Опишите услугу: что в нее входит, сколько примерно времени займет и какая гарантия на работы. Обозначьте, если жителю нужно подготовиться заранее. Отметьте преимущества — например, наличие договора, опыт мастера и что он уберет за собой.",
   "pages.condo.marketplace.marketItem.form.field.marketCategory": "Подкатегория",
-  "pages.condo.marketplace.marketItem.form.field.marketItemPhoto": "Фото услуги",
+  "pages.condo.marketplace.marketItem.form.field.marketItemPhoto": "Фото",
   "pages.condo.marketplace.marketItem.form.field.name": "Название",
   "pages.condo.marketplace.marketItem.form.field.name.uniqueError": "Услуга с таким названием уже есть",
   "pages.condo.marketplace.marketItem.form.field.parentCategory": "Категория",
@@ -1888,7 +1888,7 @@
   "pages.condo.marketplace.marketItem.form.field.priceType": "Тип цены",
   "pages.condo.marketplace.marketItem.form.field.priceType.contractPrice": "Договорная",
   "pages.condo.marketplace.marketItem.form.field.priceType.exactPrice": "Точная цена",
-  "pages.condo.marketplace.marketItem.form.field.priceType.minPrice": "Цена от…",
+  "pages.condo.marketplace.marketItem.form.field.priceType.minPrice": "Цена от",
   "pages.condo.marketplace.marketItem.form.field.priceType.tooltip": "Житель может оплатить через мобильное приложение Doma только точную цену",
   "pages.condo.marketplace.marketItem.form.field.sku": "Артикул",
   "pages.condo.marketplace.marketItem.form.field.sku.tooltip": "Должен быть уникальный",
