--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -462,14 +462,19 @@
   "api.ticket.ticketDocumentGenerationTask.STATUS_IS_ALREADY_ERROR": "Задача уже завершилась с ошибкой",
   "api.ticket.updateResidentTicket.TICKET_NOT_FOUND": "Не найдена заявка с id \"{ticketId}\" для текущего пользователя",
   "api.user.CAPTCHA_CHECK_FAILED": "Не удалось завершить операцию. Пожалуйста, обновите приложение",
+  "api.user.DAILY_REQUEST_LIMIT_FOR_EMAIL_REACHED": "С использованием вашей почты поступает очень много запросов, попробуйте позже",
   "api.user.DAILY_REQUEST_LIMIT_FOR_IP_REACHED": "С вашего IP-адреса поступает очень много запросов, попробуйте позже",
   "api.user.DAILY_REQUEST_LIMIT_FOR_PHONE_REACHED": "С использованием вашего номера телефона поступает очень много запросов, попробуйте позже",
+  "api.user.DAILY_REQUEST_LIMIT_FOR_USER_REACHED": "От вас поступает очень много запросов, попробуйте позже",
   "api.user.INVALID_PASSWORD_LENGTH": "Длина пароля должна быть от {min} до {max} символов",
   "api.user.PASSWORD_CONSISTS_OF_SMALL_SET_OF_CHARACTERS": "Пароль должен содержать не менее {min} разных символов",
   "api.user.PASSWORD_CONTAINS_EMAIL": "Пароль не может быть похож на email",
   "api.user.PASSWORD_CONTAINS_PHONE": "Пароль не может быть похож на телефон",
   "api.user.PASSWORD_IS_FREQUENTLY_USED": "Пароль слишком простой. Нужно использовать что-то более безопасное",
   "api.user.TOO_MANY_REQUESTS": "Подождите {secondsRemaining} сек., чтобы отправить запрос снова",
+  "api.user.TOTAL_REQUEST_LIMIT_FOR_EMAIL_REACHED": "С использованием вашей почты поступает очень много запросов, попробуйте позже",
+  "api.user.TOTAL_REQUEST_LIMIT_FOR_PHONE_REACHED": "С использованием вашего номера телефона поступает очень много запросов, попробуйте позже",
+  "api.user.TOTAL_REQUEST_LIMIT_FOR_USER_REACHED": "От вас поступает очень много запросов, попробуйте позже",
   "api.user.UNABLE_TO_FIND_CONFIRM_PHONE_ACTION": "Не удалось подтвердить номер телефона. Попробуйте ещё раз или обратитесь в тех-поддержку",
   "api.user.WRONG_PASSWORD_FORMAT": "Пароль должен быть строкой",
   "api.user.authenticateUserWithPhoneAndPassword.WRONG_CREDENTIALS": "Неверный телефон или пароль",
@@ -718,18 +723,18 @@
   "employee.emptyList.description": "Ваш работодатель заблокировал вас в организации",
   "employee.emptyList.title": "Вы заблокированы",
   "employee.isBlocked": "заблокирован",
-  "employee.reassignTickets.title": "На кого назначить заявки сотрудника?",
+  "employee.reassignTickets.alert.message": "Чтобы не потерять их, назначьте нового исполнителя среди сотрудников. Можно не переназначать заявки и просто удалить сотрудника.",
+  "employee.reassignTickets.alert.title": "{employeeName} назначен на несколько заявок",
   "employee.reassignTickets.buttonContent.deleteUser": "Удалить сотрудника без переназначения",
   "employee.reassignTickets.buttonContent.reassignTickets": "Удалить сотрудника и переназначить заявки",
-  "employee.reassignTickets.alert.title": "{employeeName} назначен на несколько заявок",
-  "employee.reassignTickets.alert.message": "Чтобы не потерять их, назначьте нового исполнителя среди сотрудников. Можно не переназначать заявки и просто удалить сотрудника.",
-  "employee.reassignTickets.notification.title.warning": "Не закрывайте вкладку",
-  "employee.reassignTickets.notification.title.error": "Возникла ошибка",
-  "employee.reassignTickets.notification.title.success": "Готово",
-  "employee.reassignTickets.notification.message.warning": "Переназначение заявок на другого сотрудника",
   "employee.reassignTickets.notification.message.error": "Попробуйте повторить попытку позже",
   "employee.reassignTickets.notification.message.success": "Сотрудник удален, а его заявки переназначены на другого сотрудника",
+  "employee.reassignTickets.notification.message.warning": "Переназначение заявок на другого сотрудника",
   "employee.reassignTickets.notification.progress": "Переназначено заявок: {updatedTicketsCount} из {activeTicketsOrganizationEmployeeCount}",
+  "employee.reassignTickets.notification.title.error": "Возникла ошибка",
+  "employee.reassignTickets.notification.title.success": "Готово",
+  "employee.reassignTickets.notification.title.warning": "Не закрывайте вкладку",
+  "employee.reassignTickets.title": "На кого назначить заявки сотрудника?",
   "employee.role.Administrator.description": "Администратору предоставлен полный доступ к данным и функциям Домов: он может удалять, создавать или редактировать все что угодно. Администраторы контролируют созданные организации: у одной может быть неограниченное количество администраторов.",
   "employee.role.Administrator.name": "Администратор",
   "employee.role.Contractor.description": "Подрядчик выполняет работы по назначенным заявкам. У него нет доступа к другим разделам и возможностям платформы Doma.ai.",
@@ -1002,6 +1007,11 @@
   "field.UnitName.notFound": "Для этого дома не создана шахматка, поэтому вы не можете выбрать помещение",
   "field.UnitName.notFound.link": "Добавить шахматку",
   "field.UnitType": "Тип помещения",
+  "field.UnitType.act.apartment": "Апартаментов",
+  "field.UnitType.act.commercial": "Коммерческого помещения",
+  "field.UnitType.act.flat": "Квартиры",
+  "field.UnitType.act.parking": "Машиноместа",
+  "field.UnitType.act.warehouse": "Кладовой",
   "field.UnitType.apartment": "Апартаменты",
   "field.UnitType.commercial": "Коммерческое помещение",
   "field.UnitType.flat": "Квартира",
@@ -1012,11 +1022,6 @@
   "field.UnitType.prefix.parking": "ММ",
   "field.UnitType.prefix.warehouse": "КЛ",
   "field.UnitType.warehouse": "Кладовая",
-  "field.UnitType.act.warehouse": "Кладовой",
-  "field.UnitType.act.apartment": "Апартаментов",
-  "field.UnitType.act.commercial": "Коммерческого помещения",
-  "field.UnitType.act.flat": "Квартиры",
-  "field.UnitType.act.parking": "Машиноместа",
   "field.email.requiredError": "Укажите email",
   "field.floorName": "Этаж",
   "field.required": "Это обязательное поле — заполните его",
@@ -1757,14 +1762,6 @@
   "pages.condo.error.PageTitle": "Улучшаем сервис",
   "pages.condo.error.paymentLinkHandler.NotFoundDescription": "Не удалось определить тип ссылки. Возможно ссылка неверная или скопирована не полностью.",
   "pages.condo.error.paymentLinkHandler.NotFoundTitle": "Неизвестная ссылка на оплату",
-  "pages.condo.marketplace.measure.perHour.full": "По часам",
-  "pages.condo.marketplace.measure.perHour.short": "ч",
-  "pages.condo.marketplace.measure.perItem.full": "Поштучная",
-  "pages.condo.marketplace.measure.perItem.short": "шт",
-  "pages.condo.marketplace.measure.perMeter.full": "За метр",
-  "pages.condo.marketplace.measure.perMeter.short": "м",
-  "pages.condo.marketplace.noMeasure": "Разовая работа",
-  "pages.condo.marketplace.marketItem.form.field.measure": "Оплата",
   "pages.condo.marketplace.bankAccountErrorMessage": "Ошибка в номере расчетного счета",
   "pages.condo.marketplace.bankAccountValidationErrorMassage": "Комбинация БИК и номер расчетного счета не прошли проверку. ({number}, {routingNumber})",
   "pages.condo.marketplace.bankAccountValidationErrorTitle": "Добавление реквизитов",
@@ -1879,6 +1876,7 @@
   "pages.condo.marketplace.marketItem.form.field.description.tooltip": "Опишите услугу: что в нее входит, сколько примерно времени займет и какая гарантия на работы. Обозначьте, если жителю нужно подготовиться заранее. Отметьте преимущества — например, наличие договора, опыт мастера и что он уберет за собой.",
   "pages.condo.marketplace.marketItem.form.field.marketCategory": "Подкатегория",
   "pages.condo.marketplace.marketItem.form.field.marketItemPhoto": "Фото",
+  "pages.condo.marketplace.marketItem.form.field.measure": "Оплата",
   "pages.condo.marketplace.marketItem.form.field.name": "Название",
   "pages.condo.marketplace.marketItem.form.field.name.uniqueError": "Услуга с таким названием уже есть",
   "pages.condo.marketplace.marketItem.form.field.parentCategory": "Категория",
@@ -1906,6 +1904,13 @@
   "pages.condo.marketplace.marketItem.mobileAppPreview.title": "Так это выглядит в мобильном приложении Doma",
   "pages.condo.marketplace.marketItem.notFoundError.description": "Услуги с данным ID нет в вашей организации",
   "pages.condo.marketplace.marketItem.notFoundError.title": "Услуга не найдена",
+  "pages.condo.marketplace.measure.perHour.full": "По часам",
+  "pages.condo.marketplace.measure.perHour.short": "ч",
+  "pages.condo.marketplace.measure.perItem.full": "Поштучная",
+  "pages.condo.marketplace.measure.perItem.short": "шт",
+  "pages.condo.marketplace.measure.perMeter.full": "За метр",
+  "pages.condo.marketplace.measure.perMeter.short": "м",
+  "pages.condo.marketplace.noMeasure": "Разовая работа",
   "pages.condo.marketplace.notSetup.buttonText": "Перейти к настройке",
   "pages.condo.marketplace.notSetup.tag": "Не настроен",
   "pages.condo.marketplace.notSetup.text": "Сделаем это прямо сейчас?",
