--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -647,10 +647,10 @@
   "contact.ConfirmDeleteMessage": "Все данные о жителе сотрутся навсегда",
   "contact.ConfirmDeleteTitle": "Удалить жителя?",
   "contact.Contact.ContactsEditor.AddNewContact": "Новый контакт",
-  "contact.Contact.ContactsEditor.NotResident": "Не житель",
   "contact.Contact.ContactsEditor.AnotherContact": "Другой контакт",
   "contact.Contact.ContactsEditor.Name": "ФИО",
   "contact.Contact.ContactsEditor.Name.placeholder": "Фамилия Имя Отчество",
+  "contact.Contact.ContactsEditor.NotResident": "Не житель",
   "contact.Contact.ContactsEditor.Phone": "Телефон",
   "contact.Contact.ContactsEditor.Phone.contactWithSamePhoneExists": "Такой номер телефона уже есть у этого помещения, выберите контакт из списка",
   "contact.ContactDuplicateError": "Контакт с таким номером телефона уже зарегистрирован в этом помещении",
@@ -1434,6 +1434,7 @@
   "news.type.common": "Плановый",
   "news.type.emergency": "Аварийный",
   "news.update.title": "Редактировать новость",
+  "notification.messages.B2B_APP_MESSAGE_PUSH.push.title": "{title}",
   "notification.messages.B2C_APP_MESSAGE_PUSH.push.title": "{title}",
   "notification.messages.BANK_ACCOUNT_CREATION_REQUEST.email.subject": "Открытие расчетного счета на дом",
   "notification.messages.BANK_ACCOUNT_CREATION_REQUEST.email.title": "Новая заявка на открытие счета в Сбере",
@@ -2055,9 +2056,9 @@
   "pages.condo.meter.create.AddMeterReadingPlaceholder": "Введите значение",
   "pages.condo.meter.create.AddMeterTourStepMessage": "Добавьте их, чтобы в дальнейшем заполнять только поле с показаниями",
   "pages.condo.meter.create.AddMeterTourStepTitle": "Приборы учета для этого помещения еще не добавлены",
+  "pages.condo.meter.create.Date": "Дата снятия",
   "pages.condo.meter.create.LastReading": "Предыдущие показания",
   "pages.condo.meter.create.MeterReadings": "Показания",
-  "pages.condo.meter.create.Date": "Дата снятия",
   "pages.condo.meter.create.MetersAndReadings": "Приборы учета и показания",
   "pages.condo.meter.create.meterReadingTourStepTitle": "Введите показание, которое хотите передать",
   "pages.condo.meter.create.resourceOwnedByAnotherOrganization": "Этот ресурс больше не принадлежит этой УК. Пожалуйста, обратитесь в техподдержку",
